# motion3d

./: .clang-tidy  .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  gcovr.cfg  pyproject.toml  requirements.develop.txt  requirements.docs.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: cpp_tests.yml  python.yml  python_tests.yml
cmake/: find_eigen.cmake  motion3dConfig.cmake.in
docker/: README.md  motion3d.dockerfile
docs/: README.md  build.py
docs/doxygen/: Doxyfile  build.bash
docs/sphinx/source/: conf.py  index.rst
docs/sphinx/source/motion3d/: acknowledgments.rst  cpp.rst  development.rst  installation.rst  python.rst  transformations.rst  usage.rst
docs/sphinx/source/motion3d/cpp/: common.rst  containers.rst  io.rst  transforms.rst
docs/sphinx/source/motion3d/python/: common.rst  containers.rst  io.rst  transforms.rst
example/: CMakeLists.txt  README.md  main.cpp  motion3d_example.py
include/motion3d/: common.hpp  containers.hpp  io.hpp  motion3d.hpp  transforms.hpp  utils.hpp
include/motion3d/common/: dual_quaternion.hpp  math.hpp  quaternion.hpp  time.hpp  type_traits.hpp
include/motion3d/containers/: extended_map.hpp  transform_container.hpp  transform_container_.hpp
include/motion3d/containers/transform_container_/: constructors.hpp  conversions.hpp  data_access.hpp  find.hpp  iterators.hpp  transformations.hpp
include/motion3d/io/: m3d_reader.hpp  m3d_writer.hpp  motion_data.hpp  utils.hpp
include/motion3d/transforms/: axis_angle.hpp  axis_angle_.hpp  base.hpp  dual_quaternion.hpp  dual_quaternion_.hpp  euler.hpp  euler_.hpp  matrix.hpp  matrix_.hpp  quaternion.hpp  quaternion_.hpp
include/motion3d/transforms/implementation_/: apply.hpp  astype.hpp  euler_axes.hpp  euler_conv.hpp  implementation.hpp  inverse.hpp  isequal.hpp  norm.hpp  operators.hpp  point.hpp
include/motion3d/utils/: conversion.hpp  exceptions.hpp  templating.hpp
scripts/: m3d_convert_kitti_odometry  m3d_convert_rosbag  m3d_plot_poses
src/python/: common.hpp  containers.hpp  io.hpp  motion3d_python_api.cpp  transforms.hpp
test/cpp/: data.hpp  main.cpp  test_dual_quaternion.hpp  test_euler_axes.hpp  test_extended_map.hpp  test_io.hpp  test_math.hpp  test_quaternion.hpp  test_time.hpp  test_transform_container.hpp  test_transform_interface.hpp  test_transform_result.hpp  test_utils.hpp  utils.hpp
test/data/: generate_data.py  motion1.m3d  motion2.m3d  motion3.m3d
test/data/kitti/: poses.txt  times.txt
test/data/rosbag/: generate_rosbags.py  rosbag1.bag
test/data/rosbag/rosbag2/: metadata.yaml  rosbag2.db3
test/python/: data.py  test_dual_quaternion.py  test_euler_axes.py  test_io.py  test_math.py  test_quaternion.py  test_scripts.py  test_time.py  test_transform_container.py  test_transform_interface.py  test_transform_result.py  utils.py
