[metadata]
name = motion3d
description = A header-only C++ library with full Python bindings for handling, converting, and storing 3D motions and poses.
long_description = file: README.md
long_description_content_type = text/markdown
author = Markus Horn
author_email = markus.hn11@gmail.com
url = https://github.com/mhorn11/motion3d
license = Apache License 2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = False
scripts =
    scripts/m3d_convert_kitti_odometry
    scripts/m3d_convert_rosbag
    scripts/m3d_plot_poses

[flake8]
exclude =
    .idea
    .mypy_cache
    .pytest_cache
    .venv
    .vscode
    .git
    __pycache__
    build
    docker
    docs
    extern
    include
    src
    test/python/data.py
    venv
max-line-length = 120

[tool:pytest]
testpaths = test/python
